[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/sprites/characters/Dog_BlackWhiteSpots.png" type="Texture" id=1]
[ext_resource path="res://Guard_Dog/Guard Dog.gd" type="Script" id=2]
[ext_resource path="res://interaction/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[sub_resource type="Animation" id=5]
resource_name = "CHASE"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IDLE"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 2 ),
"update": 1,
"values": [ 40 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 40.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 40.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 283.0

[node name="Guard Dog" type="KinematicBody2D"]
position = Vector2( 0, -9 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 9 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
flip_h = true
hframes = 13
vframes = 11
frame = 18
region_rect = Rect2( 2.57098, 12.3956, 39.9747, 37.0965 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CHASE = SubResource( 5 )
anims/IDLE = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 9 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 9 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="DetectArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 3 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]

[editable path="Hurtbox"]
